--- a/src/components/safe-area.scss
+++ b/src/components/safe-area.scss
@@ -1,3 +1,7 @@
+$action-safe: 3.5%;
+$title-safe: 5%;
+$frame-stroke-width: 0.1rem;
+
 .safe-area__component {
   width: 100vw;
   height: 100vh;
@@ -5,29 +9,32 @@
   position: absolute;
 }
 
-.safe-area__component rect,
-.safe-area__component line {
-  stroke-width: 0.1rem;
+.safe-area__component {
+  rect, line {
+    stroke-width: $frame-stroke-width;
+  }
+
+  rect {
+    fill: transparent;
+    stroke: red;
+    stroke-dasharray: 5, 10, 5;
+  }
 }
 
-.safe-area__component rect {
-  fill: transparent;
-  stroke: red;
-}
+.area {
+  &__action-safe {
+    x: $action-safe;
+    y: $action-safe;
+    width: round(100% - ($action-safe * 2));
+    height: round(100% - ($action-safe * 2));
+  }
 
-.area__action-safe {
-  x: 5%;
-  y: 5%;
-  width: 90%;
-  height: 90%;
-}
-
-.area__title-safe {
-  x: 10%;
-  y: 10%;
-  width: 80%;
-  height: 80%;
-  fill: transparent;
+  &__title-safe {
+    x: $title-safe;
+    y: $title-safe;
+    width: round(100% - ($title-safe * 2));
+    height: round(100% - ($title-safe * 2));
+  }
 }
 
 .safe-area__component line {
