--- a/src/components/title-card.scss
+++ b/src/components/title-card.scss
@@ -14,6 +14,7 @@ $title-card-subtitle-font-size: 3rem;
     background: rgba(255, 255, 255, 1);
     margin: 0;
     padding: 0.2rem 0.5rem;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
   }
 
   h3 {
